# clearmem

./: CMakeLists.txt  CMakeSettings.json
clearmem/: CMakeLists.txt  Source1.cpp  clearmem.cpp  clearmem.h  clearmem_test.cpp  txtr.cpp  txtr.h
